--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i": "^0.3.7",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "openai": "^4.52.7",
     "react": "^18",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "sonner": "^1.5.0",
