--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
